Update screenshot version

--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
             <img id="boat" src="./placeholder.png" alt="">
 </div>
     
+<div class="contain2">
+
+    <img id='capitaine2' src="./placeholder.png" alt="">
+    <div class="capitaineText2">Capitaine</div>
+
+    <img id='navigateur2'src="./placeholder.png" alt="">
+    <div class="navigateurText2">Navigateur</div>
+
+    <img id='medecin2' src="./placeholder.png" alt="">
+    <div class="medecinText2">Medecin</div>
+
+    <img id="charpentier2" src="./placeholder.png" alt="">
+    <div class="charpentierText2">Charpentier</div>
+
+    <div class="Nakama2">Membres</div>
+    <img id='sabreur2' src="./placeholder.png" alt="">
+    <img id='membredeux2'src="./placeholder.png" alt="">
+    <img id='membreun2' src="./placeholder.png" alt="">        
+    <img id="tireur2" src="./placeholder.png" alt="">
+    <img id="mink2" src="./placeholder.png" alt="">
+    <img id="fishmen2" src="./placeholder.png" alt="">
+    <img id="womanun2" src="./placeholder.png" alt="">
+    <img id="womandeux2" src="./placeholder.png" alt="">
+    <img id="boat2" src="./placeholder.png" alt="">
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
